Fix layout problem in Safari.

--- a/lqt.css
+++ b/lqt.css
@@ -26,6 +26,7 @@
 }
 
 .lqt_start_discussion {
+	display: block; /* Became necessary in Safari recently; don't know why it wasn't before. */
 	vertical-align: middle;
 	font-size:      120%;
 }
